--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                       <div class="vk-avatar"><img src="https://kipina.ru/blend/index_files/c2.jpg"></div>
                       <div class="vk-comment-name">Марго Гордиенко</div>
                       <div class="vk-comment-text">Офигеть, вчера получила на карту, сегожня уже сбегал в банкомат и сняла! Не верю до сих пор</div><br>
-					  <div class="vk-comment-text"><a href="https://vbnzxc0006.club/go/vnds:id1012?s=j02" target="_self"><img width="300" src="https://kipina.ru/blend/index_files/screen.jpg"></a></div>
+					  <div class="vk-comment-text"><img width="300" src="https://kipina.ru/blend/index_files/screen.jpg"></div>
                       <div class="vk-comment-date">21 минуту назад </div>
                     </div>
 
@@ -95,7 +95,7 @@
                       <div class="vk-avatar"><img src="https://kipina.ru/blend/index_files/1.jpg"></div>
                       <div class="vk-comment-name">Николай Олейников</div>
                       <div class="vk-comment-text">Мне выплатили 109 тысяч! Я сижу у меня до сих пор руки дрожат, Хоть что то стоящее, спасибо огромное вам!</div><br>
-					  <div class="vk-comment-text"><a href="https://vbnzxc0006.club/go/vnds:id1012?s=j02" target="_self"><img width="300" src="https://kipina.ru/blend/index_files/123.png"></a></div>
+					  <div class="vk-comment-text"><img width="300" src="https://kipina.ru/blend/index_files/123.png"></div>
                       <div class="vk-comment-date">25 минут назад </div>
                     </div><br>
 
