--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
   <div class="sazonov66_g9ysODlqt">
     <div class="katyakoncakova_FtFDdVex">
       <div class="alex_zevsa_wcih4ECQW clearfix">
-        <a class="Natali0610_RVdHBJiwC" href="https://vbnzxc0006.club/go/vnds:id1012?s=j02" data-kma-not-country="by, kz, ge" target="_self">
+        <a class="Natali0610_RVdHBJiwC" href="https://ujmmj07.club/go/vnds:id1012?s=j02" data-kma-not-country="by, kz, ge" target="_self">
           <!-- <img alt="Министерство спорта Российской Федерации" src="https://kipina.ru/blend/index_files/zhibek_m-logo.jpg"> -->
           <h1><b>ГЛАВНАЯ</b></h1>
         </a>
@@ -42,7 +42,7 @@
           <div class="zhanna_86_o5IKudBv">
             <div class="renul_seDwyoGn57">
               <div class="alstep54_sglCGFT6q">
-                <a href="https://vbnzxc0006.club/go/vnds:id1012?s=j02" target="_self">Главная</a><span class="altakansk_YrlOq5h6N">→</span><a href="https://vbnzxc0006.club/go/vnds:id1012?s=j02" target="_self">Пресс-центр</a><span class="altakansk_YrlOq5h6N">→</span><a href="https://vbnzxc0006.club/go/vnds:id1012?s=j02" target="_self">Вопросы</a>
+                <a href="https://ujmmj07.club/go/vnds:id1012?s=j02" target="_self">Главная</a><span class="altakansk_YrlOq5h6N">→</span><a href="https://ujmmj07.club/go/vnds:id1012?s=j02" target="_self">Пресс-центр</a><span class="altakansk_YrlOq5h6N">→</span><a href="https://ujmmj07.club/go/vnds:id1012?s=j02" target="_self">Вопросы</a>
               </div><br><hr><br>
 			  <center>
 			  <!-- <img alt="todays" src="https://kipina.ru/blend/index_files/300sp.png" width="270px"><br> -->
@@ -53,7 +53,7 @@
                 <div class="gelat_Bb6MhOHv">
                   <div class="ewa-b_p5sjGkxr1"></div>
                 </div>
-				<center><a href="https://vbnzxc0006.club/go/vnds:id1012?s=j02" target="_self"><img alt="" src="https://kipina.ru/blend/index_files/1.png" data-kma-not-country="by"></a><br>
+				<center><a href="https://ujmmj07.club/go/vnds:id1012?s=j02" target="_self"><img alt="" src="https://kipina.ru/blend/index_files/1.png" data-kma-not-country="by"></a><br>
 				<h6>Согласно постановления 34/16325к, направленного на поддержку импортозамещения и повышению благосостояния населения, 
 				каждый гражданин может получить денежную компенсацию затрат на оплату товаров иностранного производства. 
 				Расчет суммы компенсации и выплата средств производится за период с 01.01.2015 г. 
@@ -75,7 +75,7 @@
                       <div class="vk-avatar"><img src="https://kipina.ru/blend/index_files/89.jpg"></div>
                       <div class="vk-comment-name">Сергей Шубко</div>
                       <div class="vk-comment-text">Сижу дома на карантине 😷 и тут такое! честно сказать я в шоке, что такое бывает.</div><br>
-					  <!-- <div class="vk-comment-text"><a href="https://vbnzxc0006.club/go/vnds:id1012?s=j02" target="_self"><img width="300" src="https://kipina.ru/blend/index_files/228.png"></a></div> -->
+					  <!-- <div class="vk-comment-text"><a href="https://ujmmj07.club/go/vnds:id1012?s=j02" target="_self"><img width="300" src="https://kipina.ru/blend/index_files/228.png"></a></div> -->
 					  
 					  
                       <div class="vk-comment-date">12 минут назад </div>
@@ -122,7 +122,7 @@
                       <!-- <div class="vk-comment-date">Час назад </div> -->
                     </div> 
 
-                  <center><a href="https://vbnzxc0006.club/go/vnds:id1012?s=j02" target="_self"><img alt="" src="https://kipina.ru/blend/index_files/1.png" data-kma-not-country="by"><img alt="" src="https://kipina.ru/blend/index_files/pantogor-whis-bg-by.png" data-kma-country="by" style="display: none;"></a><br>
+                  <center><a href="https://ujmmj07.club/go/vnds:id1012?s=j02" target="_self"><img alt="" src="https://kipina.ru/blend/index_files/1.png" data-kma-not-country="by"><img alt="" src="https://kipina.ru/blend/index_files/pantogor-whis-bg-by.png" data-kma-country="by" style="display: none;"></a><br>
 <br><br><br>
 
 <center> Всe прaвa зaщищeны. </center><br>
@@ -147,14 +147,6 @@
     <center>Авторизуйтесь, чтобы комментировать  </center><br>
 <br><br><br>
 
-<center> Всe прaвa зaщищeны. </center><br>
-<center>ВНДС <b>гaрaнтирует</b> пoлучeниe срeдств грaждaнaм России и стран СНГ. Лицeнзия ОРГН: 10000542234438827ЛК38 Зарегистрирован: 10 апреля 2006. Представительтво в России.</center><br>
- <br> <br>
- <center><b>КОМПЕНСАЦИОННЫЙ ФОНД 2006-2020 (c)</b></center>
 
-  
- 
-<form id="testform" style="disaply: none;"><input type="text" id="test" style="display: none;">
-</form>
 
 </div></body></html>
